fixed a layout bug

--- a/src/Components/HomePage/HomePage.module.scss
+++ b/src/Components/HomePage/HomePage.module.scss
@@ -22,14 +22,14 @@
     width: 100%;
   }
   .shop{
-    display:flex;
-    left:600px;
     position: absolute;
-width: 272px;
-height: 272px;
-background: #FFFDFD;
+    left:45%;
+    font-weight: 700;
+    color: #3A6516;
+    font-size: 4vw;
 
   }
+  
   
 }
 .commentWrapper{
